# devbase

./: .eslintrc.cjs  .gitignore  package-lock.json  package.json
docs/: 01_SPECIFICATION.md  02_PROJECT_IDEA.md  03_CONDUCT.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  error_tests.rs  lib.rs  main.rs
src-tauri/src/commands/: health.rs  mod.rs  tests.rs
src-tauri/src/db/: mod.rs  schema.rs  tests.rs
src-tauri/src/git/: history.rs  mod.rs  status.rs  tests.rs
src-tauri/src/scanner/: finder.rs  mod.rs  repo_info.rs  tests.rs
src/components/dashboard/: Dashboard.css  Dashboard.tsx
src/components/graph/: CommitGraph.css  CommitGraph.tsx
src/components/layout/: Header.css  Header.tsx  MainLayout.css  MainLayout.tsx  Sidebar.css  Sidebar.tsx
src/components/repos/: RepoCard.css  RepoCard.tsx  RepoDetail.css  RepoDetail.tsx  RepoGrid.css  RepoGrid.tsx  index.ts
src/components/settings/: Settings.css  Settings.tsx
src/services/: tauri.ts
src/stores/: appStore.ts  repoStore.ts
src/styles/: theme.css
