[package]
name = "devbase"
version = "0.1.0"
description = "Local Repository Viewer & Manager - Code Mission Control"
authors = ["DevBase Team"]
edition = "2021"
default-run = "devbase"

[lib]
name = "devbase_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"

# Async runtime (for future use)
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Git operations
git2 = "0.19"

# File system watcher
notify = "6"

# Directory traversal
walkdir = "2"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# URL parsing
url = "2"
tauri-plugin-dialog = "2"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
unwrap_used = "warn"
expect_used = "warn"

[dev-dependencies]
tempfile = "3"

